updating missions profile

--- a/package.json
+++ b/package.json
@@ -49,6 +49,6 @@
     "tailwindcss": "^1.5.1",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.8.3"
+    "typescript": "^3.8.3"
   }
 }
