--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.4.1",
+    "karma": "^5.1.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
@@ -46,7 +46,7 @@
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-scss": "^2.1.1",
-    "protractor": "~5.4.3",
+    "protractor": "^7.0.0",
     "tailwindcss": "^1.5.1",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
