--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
     "@types/googlemaps": "^3.39.9",
+    "algoliasearch": "^3.35.1",
+    "angular-instantsearch": "^3.0.0-beta.5",
+    "instantsearch.js": "^3.7.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -31,6 +34,7 @@
     "@angular/cli": "~9.1.1",
     "@angular/compiler-cli": "~9.1.1",
     "@angular/language-service": "~9.1.1",
+    "@types/algoliasearch": "^3.34.10",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
