--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "@angular/common": "~9.1.1",
     "@angular/compiler": "~9.1.1",
     "@angular/core": "~9.1.1",
-    "@angular/flex-layout": "^10.0.0-beta.32",
+    "@angular/flex-layout": "^9.0.0-beta.31",
     "@angular/forms": "~9.1.1",
     "@angular/material": "^9.2.4",
-    "@angular/platform-browser": "~9.1.1",
+    "@angular/platform-browser": "^9.1.12",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
     "@types/googlemaps": "^3.39.9",
