--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "algoliasearch": "^3.35.1",
     "angular-instantsearch": "^3.0.0-beta.5",
     "instantsearch.js": "^3.7.0",
+    "material-design-icons": "^3.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
